add settings & levels sedders and add quiries api
