# app/Http/Controllers/api/v1/productController.php
@@ -4,8 +4,10 @@ namespace App\Http\Controllers\api\v1;
 
 use App\Http\Controllers\Controller;
 use App\Http\Resources\api\ProductResource;
+use App\Http\Resources\api\WinnerResource;
 use App\Models\Product;
 use App\Models\UserWishlist;
+use App\Models\Winner;
 use Illuminate\Http\Request;
 
 /**
@@ -52,7 +54,7 @@ class productController extends Controller
     }
 
     /**
-     * add product to wishlist
+     * delete product from wishlist
      *
      * this route is called when the user wants to delete a product to the Wish List
      *
@@ -69,5 +71,21 @@ class productController extends Controller
         ])->delete();
 
         return response()->message(__("The product has been deleted from the wishlist"));
+    }
+
+
+
+    /**
+     * product winners
+     *
+     * @response 200 scenario="winners" {"data":[{"username":"jaafar","url":"https://www.youtube.com/watch?v=iWwY6K5Vjyo","award_name_en":"Mr.","award_name_ar":"أسم الجائزة بالعربي","announced_on":"April 14, 2022","is_current_user":false},{"username":"jaafar","url":"https://www.youtube.com/watch?v=iWwY6K5Vjyo","award_name_en":"Ms.","award_name_ar":"أسم الجائزة بالعربي","announced_on":"April 14, 2022","is_current_user":false},{"username":"jaafar","url":"https://www.youtube.com/watch?v=iWwY6K5Vjyo","award_name_en":"Mr.","award_name_ar":"أسم الجائزة بالعربي","announced_on":"April 14, 2022","is_current_user":false}],"links":{"first":"http://safaqatek.test/api/v1/aut/product/winners?page=1","last":"http://safaqatek.test/api/v1/aut/product/winners?page=1","prev":null,"next":null},"meta":{"current_page":1,"from":1,"last_page":1,"links":[{"url":null,"label":"&laquo; Previous","active":false},{"url":"http://safaqatek.test/api/v1/aut/product/winners?page=1","label":"1","active":true},{"url":null,"label":"Next &raquo;","active":false}],"path":"http://safaqatek.test/api/v1/aut/product/winners","per_page":20,"to":3,"total":3}}
+     * @authenticated
+     *
+     */
+
+    public function winners()
+    {
+        $winners  =   Winner::with('user:id,username', 'award:id,award_name_ar,award_name_en')->paginate(20);
+        return WinnerResource::collection($winners);
     }
 }
